--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,21 @@
 [package]
-name = "x11-status-bar"
+name = "x11-overlay-bar"
 version = "0.1.0"
 authors = ["Jeffrey Xiao <jeffrey.xiao1998@gmail.com>"]
 license =  "MIT OR Apache-2.0"
 readme = "README.md"
-repository = "https://gitlab.com/jeffrey-xiao/x11-status-bar-rs"
-documentation = "https://docs.rs/x11-status-bar-rs"
+repository = "https://gitlab.com/jeffrey-xiao/x11-overlay-bar-rs"
+documentation = "https://docs.rs/x11-overlay-bar-rs"
 description = """
-A simple, but flexible system status bar for the X Window System (X11).
+A simple, but flexible system overlay bar for the X Window System (X11).
 """
 categories = ["gui", "visualization"]
 keywords = ["X11"]
 include = ["src/**/*", "Cargo.toml"]
 
 [badges]
-travis-ci = { repository = "jeffrey-xiao/x11-status-bar-rs", branch = "master" }
-codecov = { repository = "jeffrey-xiao/x11-status-bar-rs", service = "gitlab" }
+travis-ci = { repository = "jeffrey-xiao/x11-overlay-bar-rs", branch = "master" }
+codecov = { repository = "jeffrey-xiao/x11-overlay-bar-rs", service = "gitlab" }
 
 [dependencies]
+x11-dl = "2.18"
