--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,6 @@ codecov = { repository = "jeffrey-xiao/x11-overlay-bar-rs", service = "gitlab" }
 clap = "2.32"
 dbus = "0.6"
 xcb = "0.8"
+toml = "0.4"
+serde_derive = "1.0"
+serde = "1.0"
