--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "x11-overlay-bar"
+name = "robar"
 version = "0.1.0"
 authors = ["Jeffrey Xiao <jeffrey.xiao1998@gmail.com>"]
 license =  "MIT OR Apache-2.0"
 readme = "README.md"
-repository = "https://gitlab.com/jeffrey-xiao/x11-overlay-bar-rs"
-documentation = "https://docs.rs/x11-overlay-bar-rs"
+repository = "https://gitlab.com/jeffrey-xiao/robar-rs"
+documentation = "https://docs.rs/robar-rs"
 description = """
 A simple, but flexible system overlay bar for the X Window System (X11).
 """
@@ -14,13 +14,16 @@ keywords = ["X11"]
 include = ["src/**/*", "Cargo.toml"]
 
 [badges]
-travis-ci = { repository = "jeffrey-xiao/x11-overlay-bar-rs", branch = "master" }
-codecov = { repository = "jeffrey-xiao/x11-overlay-bar-rs", service = "gitlab" }
+travis-ci = { repository = "jeffrey-xiao/robar-rs", branch = "master" }
 
 [dependencies]
 bincode = "1.0"
 clap = "2.32"
-xcb = "0.8"
 toml = "0.4"
 serde_derive = "1.0"
 serde = "1.0"
+libc = "*"
+
+[dependencies.xcb]
+version = "0.8"
+features = ["randr"]
