--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Jeffrey Xiao <jeffrey.xiao1998@gmail.com>"]
 license =  "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://gitlab.com/jeffrey-xiao/robar-rs"
-documentation = "https://docs.rs/robar-rs"
+documentation = "https://docs.rs/robar"
 description = """
 A simple, but flexible system overlay bar for the X Window System (X11).
 """
