--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ A simple, but flexible system overlay bar for the X Window System (X11).
 categories = ["gui", "visualization"]
 keywords = ["X11"]
 include = ["src/**/*", "Cargo.toml"]
+edition = "2018"
 
 [badges]
 travis-ci = { repository = "jeffrey-xiao/robar-rs", branch = "master" }
