--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ matrix:
 
 before_script:
   - rustup install nightly
-  - rustup component add clippy-preview --toolchain nightly
-  - rustup component add rustfmt-preview --toolchain nightly
+  - rustup component add clippy --toolchain nightly
+  - rustup component add rustfmt --toolchain nightly
 
 script:
   - cargo build --verbose --all-targets
