--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ matrix:
   allow_failures:
     - rust: nightly
 
+before_install:
+  - sudo apt-get install libxcb-randr0-dev
+
 before_script:
   - rustup install stable
   - rustup component add clippy --toolchain stable
